[package]
name = "markdown"
version = "0.1.0"
edition = "2021"
description = "a Markdown AST parser. support commonmark, gfm, obsidian."
repository = "https://github.com/tonitrnel/markdown"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.200"
serde_yaml = { version = "0.9.33", optional = true }
autocorrect = "2.9.0"

[dev-dependencies]
regex = "1.10.4"
criterion = "0.5.1"

[[bench]]
name = "test"
harness = false

[features]
default = ["html"]
html = []
frontmatter = ["serde_yaml"]

[workspace]
members = ["example/data", "wasm-binding"]