[package]
name = "markdown"
version = "1.0.3"
edition = "2024"
description = "a Markdown AST parser. support commonmark, gfm, obsidian."
repository = "https://github.com/tonitrnel/markdown"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
rustc-hash = "2"
memchr = "2"

[dev-dependencies]
regex = "1.10.4"
criterion = "0.5.1"
colored = "2.1.0"
proptest = "1.10.0"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "phase_bench"
harness = false

[[bench]]
name = "utils_bench"
harness = false

[[bench]]
name = "timing_test"
harness = false

[features]
default = ["html", "frontmatter"]
html = []
frontmatter = []

[workspace]
members = ["examples/*", "wasm-binding"]

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
#debug = "line-tables-only"
