[package]
name = "markdown"
version = "1.0.5"
edition = "2024"
description = "a Markdown AST parser. support commonmark, gfm, obsidian."
repository = "https://github.com/tonitrnel/markdown"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
rustc-hash = "2"
memchr = "2"
smallvec = "1.13"

[dev-dependencies]
regex = "1.10.4"
criterion = "0.5.1"
colored = "2.1.0"
proptest = "1.10.0"

[[bench]]
name = "benchmark"
harness = false
path = "bench/benches/benchmark.rs"

[[bench]]
name = "phase_bench"
harness = false
path = "bench/benches/phase_bench.rs"

[[bench]]
name = "utils_bench"
harness = false
path = "bench/benches/utils_bench.rs"

[[bench]]
name = "timing_test"
harness = false
path = "bench/benches/timing_test.rs"

[[bench]]
name = "alloc_count"
harness = false
path = "bench/benches/alloc_count.rs"

[[bench]]
name = "hotspots"
harness = false
path = "bench/benches/hotspots.rs"

[features]
default = ["html", "frontmatter"]
html = []
frontmatter = []

[workspace]
members = [
    "examples/*",
    "wasm-binding",
    "bench/third_party/parser-compare",
    "bench/third_party/polyglot",
]

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
#debug = "line-tables-only"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
