[package]
name = "wasm-binding"
version = "0.1.0"
edition = "2021"
description = "markdown wasm binding"
repository = "https://github.com/tonitrnel/markdown"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
markdown = { path = "../", version = "0.1.0", features = [] }
serde = { version = "1.0.200", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
#console_error_panic_hook = "0.1.7"
#web-sys = { version = "0.3.69", features = ["console"] }

[lib]
crate-type = ["cdylib"]