[package]
name = "markdown-binding"
version = "1.0.0"
edition = "2021"
description = "markdown wasm binding"
repository = "https://github.com/tonitrnel/markdown"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
markdown = { path = "../", version = "1.0.0", features = [] }
serde = { version = "1.0.200", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
rustc-hash = "2"
#web-sys = { version = "0.3.69", features = ["console"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-nontrapping-float-to-int"]
